--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,8 @@
   "license": "ISC",
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup",
   "dependencies": {
+    "o-buttons": "^5.1.0",
+    "o-labels": "^3.0.0",
+    "o-colors": "^4.1.1"
   }
 }
