--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup#readme",
   "devDependencies": {
-    "@financial-times/n-gage": "^1.8.25"
+    "@financial-times/n-gage": "^1.8.25",
+    "@financial-times/n-internal-tool": "^2.1.0",
+    "node-sass": "^4.5.3"
   }
 }
