--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "n-newsletter-signup",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "precommit": "node_modules/.bin/secret-squirrel",
