--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,13 @@
 {
   "name": "n-newsletter-signup",
   "description": "",
-  "main": "index.js",
-  "authors": [
-    "fenglish <asuka.ochi@ft.com>"
-  ],
+	"ignore": [
+	"**/.*",
+	"node_modules",
+	"bower_components",
+	"test",
+	"tests"
+	],
   "license": "ISC",
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup",
   "dependencies": {
