--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,6 @@
   "license": "ISC",
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup",
   "dependencies": {
-    "o-buttons": "^5.1.0",
-    "o-labels": "^3.0.0",
-    "o-colors": "^4.1.1",
-    "n-myft-ui": "^7.2.0"
+    "o-labels": "^3.0.0"
   }
 }
