--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@financial-times/n-gage": "^1.8.25",
     "@financial-times/n-internal-tool": "^2.1.0",
-    "node-sass": "^4.5.3"
+    "node-sass": "^4.5.3",
+    "pa11y-ci": "^1.2.0"
   }
 }
