--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,17 @@
 {
   "name": "n-newsletter-signup",
   "description": "",
-	"ignore": [
-	"**/.*",
-	"node_modules",
-	"bower_components",
-	"test",
-	"tests"
-	],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
   "license": "ISC",
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup",
   "dependencies": {
-    "o-labels": "^3.0.0"
+    "o-labels": "^3.0.0",
+    "o-buttons": "^5.1.0"
   }
 }
