--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup",
   "dependencies": {
     "o-labels": "^3.0.0",
-    "n-ui-foundations": "^2.4.0"
+    "n-ui-foundations": "^2.4.0",
+    "o-icons": "^5.4.0"
   }
 }
