--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "test",
     "tests"
   ],
+  "main": "index.js",
   "license": "ISC",
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup",
   "dependencies": {
