--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "o-labels": "^3.0.0",
     "n-ui-foundations": "^2.4.0",
-    "o-icons": ">=4.0.0 <6"
+    "o-icons": ">=4.0.0 <6",
+    "superstore-sync": "^2.1.1"
   }
 }
