--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup#readme",
   "devDependencies": {
-    "@financial-times/n-gage": "^1.8.25",
+    "@financial-times/n-gage": "^1.17.0-beta.1",
     "@financial-times/n-internal-tool": "^2.1.0",
     "bower-resolve-webpack-plugin": "^1.0.4",
     "node-sass": "^4.5.3",
