--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "precommit": "node_modules/.bin/secret-squirrel",
     "commitmsg": "node_modules/.bin/secret-squirrel-commitmsg",
-    "prepush": "make verify -j3"
+    "prepush": "make verify -j3",
+    "prepare": "npx snyk protect || npx snyk protect -d || true"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "bower-resolve-webpack-plugin": "^1.0.4",
     "node-sass": "^4.5.3",
     "pa11y-ci": "^2.1.1",
+    "snyk": "^1.168.0",
     "webpack": "^3.5.2"
   }
 }
