--- a/bower.json
+++ b/bower.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "o-spacing": "^2.0.0",
     "o-labels": "^5.0.0",
-    "n-ui-foundations": "v4.0.0-beta.2",
-    "n-myft-ui": "v21.0.0-beta.1",
+    "n-ui-foundations": "^4.0.0-beta.2",
+    "n-myft-ui": "^21.0.1",
     "superstore-sync": "^2.1.1"
   }
 }
