--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "npx snyk protect || npx snyk protect -d || true"
+    "prepare": "npx snyk protect || npx snyk protect -d || true",
+    "preinstall": "[ \"$INIT_CWD\" != \"$PWD\" ] || npm_config_yes=true npx check-engine"
   },
   "repository": {
     "type": "git",
@@ -22,13 +23,15 @@
     "@financial-times/n-internal-tool": "^2.1.0",
     "bower": "^1.8.8",
     "bower-resolve-webpack-plugin": "^1.0.4",
+    "check-engine": "^1.10.1",
     "node-sass": "^4.5.3",
     "pa11y-ci": "^2.1.1",
     "snyk": "^1.168.0",
     "webpack": "^3.5.2"
   },
   "engines": {
-    "node": "12.x"
+    "node": "12.x",
+    "npm": "7.x || 8.x"
   },
   "husky": {
     "hooks": {
@@ -36,5 +39,9 @@
       "pre-commit": "node_modules/.bin/secret-squirrel",
       "pre-push": "make verify -j3"
     }
+  },
+  "volta": {
+    "node": "12.22.8",
+    "npm": "7.24.2"
   }
 }
