--- a/package.json
+++ b/package.json
@@ -19,19 +19,24 @@
   },
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup#readme",
   "devDependencies": {
+    "@financial-times/n-express": "^21.0.9",
     "@financial-times/n-gage": "^8.2.0",
-    "@financial-times/n-internal-tool": "^2.1.0",
     "bower": "^1.8.8",
     "bower-resolve-webpack-plugin": "^1.0.4",
     "check-engine": "^1.10.1",
     "node-sass": "^4.5.3",
     "pa11y-ci": "^2.1.1",
+    "path": "^0.12.7",
     "snyk": "^1.168.0",
     "webpack": "^3.5.2"
   },
   "engines": {
     "node": "12.x",
     "npm": "7.x || 8.x"
+  },
+  "dependencies": {
+    "@financial-times/dotcom-server-handlebars": "3.0.0",
+    "handlebars": "^4.1.2"
   },
   "husky": {
     "hooks": {
