--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "webpack": "^3.5.2"
   },
   "engines": {
-    "node": "12.x",
+    "node": "14.x || 16.x",
     "npm": "7.x || 8.x"
   },
   "dependencies": {
@@ -46,7 +46,7 @@
     }
   },
   "volta": {
-    "node": "12.22.8",
+    "node": "16.14.0",
     "npm": "7.24.2"
   }
 }
