--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,6 @@
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup",
   "dependencies": {
     "o-spacing": "^2.0.0",
-    "o-labels": "^5.0.0",
-    "n-ui-foundations": "^6.0.0",
-    "n-myft-ui": "^23.0.1",
-    "superstore-sync": "^2.1.1"
+    "o-labels": "^5.0.0"
   }
 }
