--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup",
   "dependencies": {
     "o-spacing": "^2.0.0",
-    "o-labels": "^5.0.0"
+    "o-labels": "^5.0.0",
+    "o-buttons": "^6.2.0"
   }
 }
