--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
 		"bower": "^1.8.8",
 		"bower-resolve-webpack-plugin": "^1.0.4",
 		"check-engine": "^1.10.1",
-		"node-sass": "^7.0.1",
 		"pa11y-ci": "^2.1.1",
 		"path": "^0.12.7",
 		"snyk": "^1.168.0",
@@ -40,10 +39,8 @@
 		"ftdomdelegate": "^5.0.0",
 		"handlebars": "^4.1.2",
 		"js-cookie": "^3.0.1",
+		"sass": "^1.51.0",
 		"superstore-sync": "^2.1.1"
-	},
-	"peerDependencies": {
-		"n-ui-foundations": "^9.0.0"
 	},
 	"husky": {
 		"hooks": {
@@ -55,5 +52,8 @@
 	"volta": {
 		"node": "16.14.0",
 		"npm": "7.24.2"
+	},
+	"peerDependencies": {
+		"n-ui-foundations": "^9.0.0"
 	}
 }
