--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "n-newsletter-signup",
+  "name": "@financial-times/n-newsletter-signup",
   "version": "1.0.0",
   "description": "",
   "main": "",
@@ -21,14 +21,17 @@
   "devDependencies": {
     "@financial-times/n-express": "^21.0.9",
     "@financial-times/n-gage": "^8.2.0",
-    "bower": "^1.8.8",
-    "bower-resolve-webpack-plugin": "^1.0.4",
+    "@financial-times/o-labels": "^6.2.2",
     "check-engine": "^1.10.1",
-    "node-sass": "^7.0.1",
+    "sass": "^1.51.0",
     "pa11y-ci": "^2.1.1",
     "path": "^0.12.7",
     "snyk": "^1.168.0",
     "webpack": "^3.5.2"
+  },
+  "peerDependencies": {
+    "@financial-times/o-spacing": "^3.0.0",
+    "n-ui-foundations": "^9.0.0"
   },
   "engines": {
     "node": "14.x || 16.x",
@@ -36,6 +39,8 @@
   },
   "dependencies": {
     "@financial-times/dotcom-server-handlebars": "3.0.0",
+    "@financial-times/n-myft-ui": "^28.0.2",
+    "superstore-sync": "^2.1.1",
     "handlebars": "^4.1.2"
   },
   "husky": {
