--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-demo": "npm run webpack-styles-dev && npm run build",
     "start": "dotcom-tool-kit run:local",
     "build": "dotcom-tool-kit build:local",
-    "demo": "npm run build-demo && npm run start"
+    "demo": "npm run build-demo && node demos/app"
   },
   "jest": {
     "transform": {
