--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "dotcom-tool-kit test:local",
     "prepare": "npx snyk protect || npx snyk protect -d || true",
-    "preinstall": "[ \"$INIT_CWD\" != \"$PWD\" ] || npm_config_yes=true npx check-engine",
     "webpack-styles-dev": "webpack --config webpack.styles.config.js --env development --mode development",
     "build-demo": "npm run webpack-styles-dev && npm run build",
     "start": "dotcom-tool-kit run:local",
@@ -36,18 +35,18 @@
   "homepage": "https://github.com/Financial-Times/n-newsletter-signup#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.21.5",
-    "@dotcom-tool-kit/component": "^3.1.1",
-    "@dotcom-tool-kit/jest": "^3.1.0",
-    "@dotcom-tool-kit/node": "^3.1.0",
-    "@dotcom-tool-kit/pa11y": "^0.4.1",
-    "@dotcom-tool-kit/vault": "^3.1.0",
-    "@dotcom-tool-kit/webpack": "^3.1.0",
-    "@financial-times/n-express": "^21.0.9",
+    "@dotcom-tool-kit/component": "^3.1.8",
+    "@dotcom-tool-kit/jest": "^3.2.0",
+    "@dotcom-tool-kit/node": "^3.2.1",
+    "@dotcom-tool-kit/pa11y": "^0.4.4",
+    "@dotcom-tool-kit/vault": "^3.1.3",
+    "@dotcom-tool-kit/webpack": "^3.1.4",
+    "@financial-times/n-express": "^28.0.1",
     "@financial-times/o-labels": "^6.2.2",
     "babel-jest": "^29.5.0",
     "check-engine": "^1.10.1",
     "css-loader": "^6.7.3",
-    "dotcom-tool-kit": "^3.1.1",
+    "dotcom-tool-kit": "^3.2.1",
     "jest-axe": "^7.0.1",
     "mini-css-extract-plugin": "^2.7.5",
     "pa11y-ci": "^2.1.1",
@@ -61,8 +60,8 @@
     "n-ui-foundations": "^9.0.0"
   },
   "engines": {
-    "node": "14.x || 16.x",
-    "npm": "7.x || 8.x"
+    "node": "16.x || 18.x",
+    "npm": "7.x || 8.x || 9.x"
   },
   "dependencies": {
     "@financial-times/dotcom-server-handlebars": "8.0.0",
@@ -78,7 +77,6 @@
     }
   },
   "volta": {
-    "node": "16.14.0",
-    "npm": "7.24.2"
+    "node": "18.17.1"
   }
 }
