--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@babel/preset-env": "^7.21.5",
     "@dotcom-tool-kit/component": "^4.0.4",
     "@dotcom-tool-kit/jest": "^3.2.2",
+    "@dotcom-tool-kit/lint-staged-npm": "^3.1.5",
     "@dotcom-tool-kit/node": "^3.3.6",
     "@dotcom-tool-kit/pa11y": "^0.4.6",
+    "@dotcom-tool-kit/secret-squirrel": "^2.1.4",
     "@dotcom-tool-kit/vault": "^3.1.6",
     "@dotcom-tool-kit/webpack": "^3.1.6",
     "@financial-times/n-express": "^28.0.1",
@@ -72,11 +74,14 @@
   "husky": {
     "hooks": {
       "commit-msg": "dotcom-tool-kit git:commitmsg",
-      "pre-commit": "dotcom-tool-kit git:precommit && secret-squirrel",
+      "pre-commit": "dotcom-tool-kit git:precommit",
       "pre-push": "make verify -j3"
     }
   },
   "volta": {
     "node": "18.17.1"
+  },
+  "lint-staged": {
+    "**/*.js": "dotcom-tool-kit format:staged test:staged --"
   }
 }
